# example-fastapi

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5d6e98c48a7a_.py  ab05aa54e525_.py  e978ec483291_test.py
api/: __init__.py  config.py  db.py  exception_handlers.py  main.py  middleware.py
api/models/: __init__.py  artisan.py  category.py  common.py  item.py  market.py  tag.py  user.py
api/routers/: artisan.py  category.py  health.py  item.py  market.py  pagination.py  tag.py  user.py
api/tasks/: __init__.py  brokers.py  common.py
api/tests/: conftest.py  test_artisian.py  test_categories.py  test_items.py  test_markets.py  test_tags.py  test_users.py
api/tests/fixtures/: __init__.py  artisan.py  category.py  item.py  market.py  tag.py  user.py
api/utils/: patterns.py  tracing.py
deploy/docker/: Dockerfile
deploy/helm/app/: Chart.yaml  values.yaml
deploy/helm/app/templates/: deployment.yaml  ingress.yaml  service.yaml
deploy/helm/grafana/: Chart.yaml  values.yaml
deploy/helm/grafana/dashboards/: fast_api_observability.json  faststream.json  prometheus.json
deploy/helm/grafana/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/helm/loki/: Chart.yaml  values.yaml
deploy/helm/loki/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  service.yaml
deploy/helm/postgres/: Chart.yaml  values.yaml
deploy/helm/postgres/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  persistentvolumeclaim.yaml  service.yaml
deploy/helm/prometheus/: Chart.yaml  values.yaml
deploy/helm/prometheus/templates/: configmap.yaml  deployment.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
deploy/helm/redis/: Chart.yaml  values.yaml
deploy/helm/redis/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
deploy/helm/tempo/: Chart.yaml  values.yaml
deploy/helm/tempo/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  service.yaml
deploy/helm/worker/: Chart.yaml  values.yaml
deploy/helm/worker/templates/: deployment.yaml  secret.yaml  service.yaml
scripts/: deploy.sh  msget.sh
